Reverted back to NPM install in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,8 @@ node_js:
   - "5.9.0"
 
 install:
-  - yarn
+  - npm install
 
 script:
   - npm test
   - npm run build
-
-cache:
-  yarn: true
-  directories:
-    - node_modules
